--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@
 #Server
 server.port = 8094
 # Database
-spring.datasource.url=jdbc:mysql://132.148.143.124:3306/example_shivshambho_temp
+spring.datasource.url=jdbc:mysql://192.169.205.160:3306/shivsham_gajanan
+
 #www.aaryatechindia.in
-spring.datasource.username=example_shiv
-spring.datasource.password=Shiv@1234567890
+spring.datasource.username=shivsham_gajanan
+spring.datasource.password=Gajanancrusher@123
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
